--- a/public/assets/css/shared/style.css
+++ b/public/assets/css/shared/style.css
@@ -4943,7 +4943,7 @@ button.bg-danger:focus {
   background-color: #ff3225 !important; }
 
 .bg-light {
-  background-color: #fbfbfb !important; }
+  background-color: #d5d7d9  !important; }
 
 a.bg-light:hover, a.bg-light:focus,
 button.bg-light:hover,
